version x.x - Guardian of Steel (tba)

    + Improved documentation
    + Delete single local storage of a link
    ++ Done by uncheck the store image locally option
    + Fixed a bug in tag selection SQL query

version 2.2 - Guardian of Ice - (2019-02-27)

	+ email import
	+ using mysql transactions if needed
	+ pagination
	+ authentication with an extra url now (index.php?m=auth)
	+ management actions shown only if authenticated
	+ small stats overview
	+ links can now be deleted
	+ awaiting moderation links can new be moderated
	+ clean up the local storage via stats page (if authenticated)
	+ Updated documentation
	+ INFO, WARN and ERROR now in the log files used for messages
	+ stats, storage usage. With stats and valid auth display moderation
	+ email import auto reply check
	+ flush local storage of images
	+ Fixed an error in create sql file
	+ Fixed info when a tag or category has no links
	+ Fixed code cleanups
	+ Fixed access to log files directory
	+ Fixed check for duplicates in email importer

version 2.1alpha - Guardian of Fire - (2019-09-29)

	+ cleanups
	+ edit area for a bookmark
	+ documentation and sql setup cleanup
	+ new design with bulma.css (https://bulma.io/)
	+ added SEO information to "prevent" crawling and a robots.txt file
	+ new option to restrict access via http basic auth.
	+ very simple user authentication based on http basic auth.
		Needs improvement in further releases
	+ using mysql transactions
	+ working with new MySQL (5.7) version
	+ Image from parsed link info can now be stored

version 2.0alpha - Bright Crucible - (2017-01-05)

	+ This is a not prodction ready version of the complete rewrite.
	+ It is now written in PHP based on the idea from Luke Reeves

version 1.5 (30 Nov. 2012)

	+ support phantomjs as a screenshot tool for a bookmark
	+ code updates and cleanup

version 1.1 (20 Feb. 2012)

	+ older and newer link at the top no working
	+ bug with path to the jquery.js file
	+ some statistics